cluster/apps/media-server/gluetun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: gluetun
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - homeassistant
              namespaces:
                - homeassistant
              topologyKey: kubernetes.io/hostname
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.41.3
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "(ip rule del table 51820; ip -6 rule del table 51820) || true"
          ports:
            - name: vpn-port
              containerPort: 8888
            - name: qbittorrent
              containerPort: 8080
            - name: nzbget
              containerPort: 6789
            - name: prowlarr
              containerPort: 9696
            - name: flaresolverr
              containerPort: 8191
            - name: sonarr
              containerPort: 8989
            - name: radarr
              containerPort: 7878
            - name: lidarr
              containerPort: 8686
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: gluetun-config
              mountPath: /gluetun
            - name: dev-net-tun
              mountPath: /dev/net/tun
            - name: gluetun-tmp
              mountPath: /tmp/gluetun
            - name: gluetun-auth-config
              mountPath: /gluetun/auth/config.toml
              subPath: config.toml
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "448Mi"
            limits:
              memory: "768Mi"
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:26.3.20261002
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - |
                    # Add DestDir and InterDir if they don't already exist
                    if ! grep -q '^DestDir=' /config/nzbget.conf; then sed -i '/^MainDir=.*/a DestDir=$${MainDir}/completed' /config/nzbget.conf; fi
                    if ! grep -q '^InterDir=' /config/nzbget.conf; then sed -i '/^MainDir=.*/a InterDir=$${MainDir}/intermediate' /config/nzbget.conf; fi
                    # Change config values
                    sed -i 's#^MainDir=.*#MainDir=/data/downloads/nzbget#' /config/nzbget.conf
                    sed -i 's#^DestDir=.*#DestDir=/data/downloads/nzbget/completed#' /config/nzbget.conf
                    sed -i 's#^InterDir=.*#InterDir=/data/downloads/nzbget/intermediate#' /config/nzbget.conf
                    sed -i 's#^AppendCategoryDir=.*#AppendCategoryDir=no#' /config/nzbget.conf
          resources:
            requests:
              cpu: "20m"
              memory: "16Mi"
            limits:
              memory: "64Mi"
          volumeMounts:
            - name: nzbget-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.5.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "20m"
              memory: "224Mi"
            limits:
              memory: "320Mi"
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
        - name: flaresolverr
          image: flaresolverr/flaresolverr:v3.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8191
          resources:
            requests:
              cpu: "20m"
              memory: "256Mi"
            limits:
              memory: "704Mi"
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          resources:
            requests:
              cpu: "20m"
              memory: "256Mi"
            limits:
              memory: "384Mi"
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          resources:
            requests:
              cpu: "20m"
              memory: "256Mi"
            limits:
              memory: "320Mi"
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8686
          resources:
            requests:
              cpu: "20m"
              memory: "192Mi"
            limits:
              memory: "256Mi"
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-config-pvc
        - name: gluetun-auth-config
          secret:
            secretName: media-secret
            items:
              - key: config.toml
                path: config.toml
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-conf
          secret:
            secretName: gluetun-conf
        - name: nzbget-config
          persistentVolumeClaim:
            claimName: nzbget-config-pvc
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: gluetun-tmp
          emptyDir: {}
