cluster/apps/media-server/gluetun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media-server
spec:
  selector:
    app: gluetun
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media-server
spec:
  selector:
    app: gluetun
  ports:
    - name: http
      port: 6789
      targetPort: 6789
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-server
spec:
  selector:
    app: gluetun
  ports:
    - name: http
      port: 9696
      targetPort: 9696
